--- a/index.html
+++ b/index.html
@@ -86,53 +86,95 @@
 
   <main>
 
-<div class="container row">
-  <div class="main__text">
-    <h2 class="main__title">It doesn't have to be so hard</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-      eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-      enim ad minim veniam. Lorem ipsum dolor sit amet, consectetur
-      adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-      dolore magna aliqua. Ut enim ad minim veniam.</p>
-    <div class="main__img">
-      <img src="css/img/doc-sketch.jpg" alt="Document Sketches">
-    </div>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-      eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-      enim ad minim veniam. Lorem ipsum dolor sit amet, consectetur
-      adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-      dolore magna aliqua. Ut enim ad minim veniam.</p>
+    <div class="container row">
+      <div class="main__text">
+        <h2 class="main__title">It doesn't have to be so hard</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+          enim ad minim veniam. Lorem ipsum dolor sit amet, consectetur
+          adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+          dolore magna aliqua. Ut enim ad minim veniam.</p>
+        <div class="main__img">
+          <img src="css/img/doc-sketch.jpg" alt="Document Sketches">
+        </div>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+          enim ad minim veniam. Lorem ipsum dolor sit amet, consectetur
+          adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+          dolore magna aliqua. Ut enim ad minim veniam.</p>
 
-  </div>
-  <div class="sidebar">
-    <div class="main__card">
-      <h3 class="main__card__title">Break it Down</h3>
-      <p class="opacity-0-7">Lorem ipsum dolor sit amet,
-        consectetur adipiscing elit, sed do
-        eiusmod tempor incididunt ut
-        labore et dolore magna aliqua.</p>
-    </div>
-    <div class="main__card">
-      <h3 class="main__card__title">Work your way up</h3>
-      <p class="opacity-0-7">Lorem ipsum dolor sit amet,
-        consectetur adipiscing elit, sed do
-        eiusmod tempor incididunt ut
-        labore et dolore magna aliqua.</p>
-    </div>
-    <div class="main__card">
-      <h3 class="main__card__title">Lorem Ipsum</h3>
-      <p class="opacity-0-7">Lorem ipsum dolor sit amet,
-        consectetur adipiscing elit, sed do
-        eiusmod tempor incididunt ut
-        labore et dolore magna aliqua.</p>
-    </div>
+      </div>
+      <div class="sidebar">
+        <div class="main__card">
+          <h3 class="main__card__title">Break it Down</h3>
+          <p class="opacity-0-7">Lorem ipsum dolor sit amet,
+            consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut
+            labore et dolore magna aliqua.</p>
+        </div>
+        <div class="main__card">
+          <h3 class="main__card__title">Work way up</h3>
+          <p class="opacity-0-7">Lorem ipsum dolor sit amet,
+            consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut
+            labore et dolore magna aliqua.</p>
+        </div>
+        <div class="main__card">
+          <h3 class="main__card__title">Lorem Ipsum</h3>
+          <p class="opacity-0-7">Lorem ipsum dolor sit amet,
+            consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut
+            labore et dolore magna aliqua.</p>
+        </div>
 
-  </div>
-</div>
+      </div>
+    </div>
   </main>
 
 </body>
 <footer>
+  <section class="footer">
+
+    <h1 class="footer__title">Just scratching the surface</h1>
+    <div class="container row row--align-top">
+      <div class="footer_text">
+        <h3 class="footer_subtitle">About our company</h3>
+        <p class="opacity-0-7">Lorem ipsum dolor sit amet, consectetur adipiscing
+          elit, sed do eiusmod tempor incididunt ut labore et
+          dolore magna aliqua. Ut enim ad minim veniam.</p>
+      </div>
+
+    <div class="footer_lists">
+        <div class="footer_list">
+        <h3 class="footer_subtitle">Getting around</h3>
+        <ul class="opacity-0-7">
+          <li>Home</li>
+          <li>About</li>
+          <li>Contact</li>
+        </ul>
+
+      </div>
+      <div class="footer_list">
+        <h3 class="footer_subtitle">Other things</h3>
+        <ul class="opacity-0-7">
+          <li>Lorem ipsum</li>
+          <li>Dolor</li>
+          <li>Sit amet</li>
+          <li>Consectetur</li>
+        </ul>
+      </div>
+      <div class="footer_list">
+        <h3 class="footer_subtitle">And more</h3>
+        <ul class="opacity-0-7">
+          <li>Lorem ipsum</li>
+          <li>Dolor</li>
+          <li>Sit amet</li>
+          <li>Consectetur</li>
+        </ul>
+      </div>
+    </div>
+    </div>
+  </section>
   <script type="text/javascript" src="main.js"></script>
 </footer>
 
